--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
 <div class="main">
     <p>Enter Text Below To Edit</p>
-<textarea name="" id="" rows="15"></textarea>
+<textarea name="" id="tagetText" rows="15"></textarea>
 <input type="button" class="btn btn-primary mx-1 my-1"
  value="Convert to Upparcase">
 </div>
