--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 <textarea id="story" name="story"
           rows="5" cols="33">
 It was a dark and stormy night...
+
+</textarea>
+<label for="story">Tell us your story:</label>
+
+<textarea id="story" name="story"
+          rows="5" cols="33">
+It was a dark and stormy night...
+
 </textarea>
 </body>
 </html>
