--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <p>This webapp has all the features of the tetx like as: UPPER case, lower case, italic, bold and many other features</p>
     <MemberList>
         <ul>Abdullah Moti Wala</ul>
-        <ul>Shahabuddin Ahmed</ul>
+        <ul>Shahabuddin </ul>
         <ul>Shahzad</ul>
         <ul>Member 4</ul>
     </MemberList>
