--- a/about.html
+++ b/about.html
@@ -12,11 +12,21 @@
 <body>
     <h2>Text Utils WebApp</h2>
     <p>This webapp has all the features of the tetx like as: UPPER case, lower case, italic, bold and many other features</p>
+    <!-- Memeber list -->
+    <h3>Members</h3>
     <MemberList>
-        <ul>Abdullah Moti Wala</ul>
-        <ul>Shahabuddin </ul>
-        <ul>Shahzad</ul>
-        <ul>Member 4</ul>
+        <ul>
+            <a href="#">Abdullah Moti Wala</a>
+        </ul>
+        <ul>
+            <a href="#">Shahabuddin</a>
+        </ul>
+        <ul>
+            <a href="#">Shahzad</a>
+        </ul>
+        <ul>
+            <a href="#">Member 4</a>
+        </ul>
     </MemberList>
     <script src="app.js">
     </script>
